--- a/Fishery Simulation/Fishery Simulation.csproj
+++ b/Fishery Simulation/Fishery Simulation.csproj
@@ -34,7 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>school_of_fish.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.Data.v10.2, Version=10.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -64,6 +65,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="lib\Glibs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AboutBox2.resx">
@@ -91,9 +93,21 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="res\_svn\all-wcprops" />
+    <None Include="res\_svn\entries" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="school_of_fish.ico" />
+    <Content Include="res\layout\school_of_fish.ico" />
+    <Content Include="res\layout\school_of_fish.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="res\values\" />
+    <Folder Include="res\_svn\prop-base\" />
+    <Folder Include="res\_svn\props\" />
+    <Folder Include="res\_svn\text-base\" />
+    <Folder Include="res\_svn\tmp\prop-base\" />
+    <Folder Include="res\_svn\tmp\props\" />
+    <Folder Include="res\_svn\tmp\text-base\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
