--- a/Fishery Simulation/Fishery Simulation.csproj
+++ b/Fishery Simulation/Fishery Simulation.csproj
@@ -34,8 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>school_of_fish.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.Data.v10.2, Version=10.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -68,6 +67,7 @@
     <Compile Include="lib\Glibs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="AboutBox2.resx">
       <DependentUpon>AboutBox2.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Content Include="res\layout\school_of_fish.ico" />
     <Content Include="res\layout\school_of_fish.png" />
+    <Content Include="school_of_fish.ico" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="res\values\" />
