--- a/Fishery Simulation/Fishery Simulation.csproj
+++ b/Fishery Simulation/Fishery Simulation.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="DataSet1.xsc">
       <DependentUpon>DataSet1.xsd</DependentUpon>
@@ -129,6 +130,7 @@
     <None Include="res\_svn\entries" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="res\layout\Open-Folder-Full-icon-20x20.jpg" />
     <Content Include="res\layout\Open-Folder-Full-icon.png" />
     <Content Include="res\layout\Open-Folder-Full.ico" />
     <Content Include="res\layout\school_of_fish.ico" />
